--- a/src/components/Bodies/EndedOaedForm/EndedOaedForm.css
+++ b/src/components/Bodies/EndedOaedForm/EndedOaedForm.css
@@ -1,4 +1,4 @@
-.backgrnd{
+#endedoaedForm .backgrnd{
   width: 100%; 
   height: 800px; 
   background-image: -webkit-linear-gradient(top, #194536, #077344);
@@ -12,11 +12,7 @@
 
   @media (max-width: 700px) {
   
-    .over{
-      padding-left: 0px;
-      padding-right: 0px;
-    }
-    .backgrnd{
+    #endedoaedForm .backgrnd{
       height: 1100px;
     }
   }
